<RelativeLayout
    android:id="@+id/relativeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/temperatureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="─"
        android:textSize="100sp"
        />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/temperatureLabel"
        android:layout_centerHorizontal="true"
        android:text="@string/time_default"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/locationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timeLabel"
        android:layout_marginBottom="56dp"
        android:text="Ondara, Alicante"
        android:textSize="25sp"
        android:maxLines="1"
        android:maxLength="30"
        android:width="250dp"
        android:minHeight="50dp"
        android:singleLine="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"/>

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/locationLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/locationLabel"
        android:adjustViewBounds="false"
        android:baselineAlignBottom="true"
        android:contentDescription="Weather Icon"
        android:src="@drawable/clear_day"
        android:layout_toLeftOf="@+id/locationLabel"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/temperatureLabel"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/humidityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity_label"/>

            <TextView
                android:id="@+id/humidityValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="─"
                android:textSize="24sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/precipLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precipitation_label"/>

            <TextView
                android:id="@+id/precipValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="─"
                android:textSize="24sp"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/summaryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/summary_default"/>

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button_refresh"
        android:visibility="visible"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/refreshButton"
        android:visibility="invisible"/>

</RelativeLayout>
